[gd_scene format=3 uid="uid://clpqi47b3lhxa"]

[ext_resource type="Script" uid="uid://s10rr2lkydv2" path="res://scenes/HomeScreen.gd" id="1_home"]

[node name="HomeScreen" type="Control" unique_id=1774589415]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_home")

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=764109846]
layout_mode = 1
offset_right = 720.0
offset_bottom = 1280.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer" unique_id=2045471269]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer" unique_id=388675772]
layout_mode = 2
text = "PEWPEWLOOT"
horizontal_alignment = 1

[node name="CrystalLabel" type="Label" parent="MarginContainer/VBoxContainer" unique_id=111222333]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 1, 1, 1)
text = "üíé 0"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer" unique_id=1692803490]
layout_mode = 2

[node name="ProfileLabel" type="Label" parent="MarginContainer/VBoxContainer" unique_id=1623084144]
layout_mode = 2
text = "Profil: ---"
horizontal_alignment = 1

[node name="ShipLabel" type="Label" parent="MarginContainer/VBoxContainer" unique_id=667643264]
layout_mode = 2
text = "Vaisseau: ---"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer" unique_id=1698405309]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="ButtonsContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer" unique_id=1470034498]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="PlayButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsContainer" unique_id=336427105]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "üéÆ Jouer"

[node name="ShipButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsContainer" unique_id=871079465]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "üöÄ Vaisseau"

[node name="OptionsButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsContainer" unique_id=1721778678]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
size_flags_horizontal = 4
disabled = true
text = "‚öôÔ∏è Options"

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsContainer" unique_id=470505874]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "üö™ Quitter"

[node name="Spacer2" type="Control" parent="MarginContainer/VBoxContainer" unique_id=1895260430]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ChangeProfileButton" type="Button" parent="MarginContainer/VBoxContainer" unique_id=1084144880]
layout_mode = 2
size_flags_horizontal = 4
text = "Changer de profil"
